tests/expression/list_faulty_contains.sy
start :: fn do
    a :: [1, 2, 3]
    (0 in a) <=> false
    ("123" in a) <=> true
    (2 in a) <=> "123"
end
// error: $Mismatch
